# nixops

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  README.md  all-plugins.txt  bors.toml  ci.nix  clean_test_state_files.py  coverage-tests.py  data.nix  default.nix  dev-shell  do.nix  flake-compat.nix  flake.nix  for and revert prev wrong change  live-docs.py  overrides.nix  pyproject.toml  release.nix  setup.cfg  setup.py  shell.nix  tests.py  update-all
.github/workflows/: ci.yml
charon/: __init__.py  deployment.py  ec2_utils.py  import_json.py  known_hosts.py  parallel.py  state_lock.py  util.py
charon/backends/: __init__.py  ec2.py  none.py  virtualbox.py
charon/resources/: __init__.py  ec2_keypair.py  iam_role.py  s3_bucket.py  sqs_queue.py
ci/: check-flake8.sh  check-formatting.sh  check-mypy.sh  check-nix-files.sh  check-poetry.sh  check-tests.sh  lint-docs.sh  mypy-ratchet.sh  ratchet.py  run-functional.sh  run-ratchet.sh
doc/: conf.py  default.nix  index.rst  introduction.rst  overview.rst  requirements.txt
doc/dev/: writing-documentation.rst
doc/guides/: deploy-without-root.rst
doc/manual/: Makefile  charon.xml  compat.nix  default.nix  dummy.nix  hacking.rst  hacking.xml  index.rst  installation.rst  installation.xml  introduction.rst  (+10 more)
examples/: apache-azure.nix  apache-cloud.nix  apache-ec2-multizone.nix  apache-ec2.nix  apache-vbox.nix  apache.nix  aws-cmk.nix  cloudwatch-logs.nix  cloudwatch-metric-alarm.nix  cloudwatch.nix  container-in-libvirtd.nix  datadog-monitor.nix  datadog-screenboard.nix  datadog-timeboard.nix  drbd.nix  ec2-fleet.nix  ec2-info-example.nix  ec2-info.nix  ec2-launch-template.nix  ec2-rds-dbinstance.nix  ec2-vpc-security-group.nix  ec2.nix  elastic-file-system.nix  encryption-test.nix  gce-route.nix  geodistributed-azure.nix  jumphost-virtd.nix  mediawiki-ec2.nix  mediawiki-single-vbox.nix  mediawiki-single.nix  mediawiki.nix  nix-homepage.nix  nova.nix  rmq-gce.nix  route53.nix  s3-bucket.nix  sns-topic.nix  terminal-server-ec2.nix  terminal-server.nix  trivial-azure-disks.nix  (+18 more)
integration-tests/: default.nix
maintainers/: build-virtualbox-image.sh  dump-route53-hosted-zone.py
nix/: adhoc-cloud-vm.nix  adhoc.nix  auto-luks.nix  auto-raid0.nix  aws-vpn-connection-route.nix  aws-vpn-connection.nix  aws-vpn-gateway.nix  azure-affinity-group.nix  azure-availability-set.nix  azure-blob-container.nix  azure-blob.nix  azure-credentials.nix  azure-deployment.nix  azure-directory.nix  azure-disk.nix  azure-dns-record-set.nix  azure-dns-zone.nix  azure-express-route-circuit.nix  azure-file.nix  azure-gateway-connection.nix  azure-hosted-service.nix  azure-load-balancer.nix  azure-local-network-gateway.nix  azure-mgmt-credentials.nix  azure-network-security-group.nix  azure-os-image.nix  azure-queue.nix  azure-reserved-ip-address.nix  azure-resource-group.nix  azure-share.nix  azure-signed-identifiers.nix  azure-storage.nix  azure-table.nix  azure-traffic-manager-profile.nix  azure-virtual-network-gateway.nix  azure-virtual-network.nix  azure.nix  base.nix  cloudwatch-log-group.nix  cloudwatch-log-stream.nix  (+100 more)
nixops/: __main__.py  ansi.py  args.py  azure_common.py  command.py  datadog_utils.py  deployment.py  diff.py  ec2_utils.py  evaluation.py  exceptions.py  gce_common.py  hetzner_utils.py  import_json.py  known_hosts.py  logger.py  monkey.py  nix_expr.py  parallel.py  plugin.py  resource_plugin.py  script_defs.py  ssh_util.py  state.py  statefile.py  util.py  vault_common.py
scripts/: charon  nixops
src/: adhoc-cloud-vm.nix  charon.pl  eval-machine-info.nix  nixos-deploy-network.pl
tests/: __init__.py  hetzner-backend.nix  id_test  id_test.pub  none-backend.nix
(+289 files in other folders)
