[tool.poetry]
name = "nixops"
version = "2.0.0"
description = "NixOS cloud provisioning and deployment tool"
authors = ["Eelco Dolstra <eelco.dolstra@logicblox.com>"]
license = "LGPL-3.0-only"
include = ["nix/*.nix", "nixops/py.typed" ]

[tool.poetry.dependencies]
python = "^3.7"
PrettyTable = "^0.7.2"
pluggy = "^0.13.1"
typeguard = "^2.7.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.770"
black = "^19.10b0"
# For mypy txt report
lxml = "^4.5.0"

# docs
livereload = "^2.6.1"
sphinx = "^3.0.3"
flake8 = "^3.8.1"

[tool.poetry.plugins."nixops"]
nixops = "nixops.plugin"

[tool.poetry.scripts]
nixops = 'nixops.__main__:main'
charon = 'nixops.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
